--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,14 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather</title>
   <link rel="icon" href="/img/weather.png"></link>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="/js/app.js"></script>
+  <link rel="stylesheet" href="./css/style.css"> 
 </head>
 <body>
   <div class="main-content">
     {{>header}} 
     <p>Use this site to get your weather!</p>
+
+    <form>
+      <input placeholder="Location">
+      <button>Search</button>
+    </form>
   </div>
   {{>footer}}
+<script src="/js/app.js"></script>
 </body>
+
 </html>
