--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,11 +11,12 @@
   <div class="main-content">
     {{>header}} 
     <p>Use this site to get your weather!</p>
-
     <form>
       <input placeholder="Location">
       <button>Search</button>
     </form>
+    <p id="message-1"></p>
+    <p id="message-2"></p>
   </div>
   {{>footer}}
 <script src="/js/app.js"></script>
