--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,20 @@ header a {
 }
 
 .profile {
-  width: 250px;
+    width: 250px;
+}
+input {
+    border: 1px solid #cccccc;
+    padding: 8px;
+    width: 220px;  
+}
+
+button {
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 8px;
 }
 
 footer {
